--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,3 +1,4 @@
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
 LocalMapOptions=
@@ -16,10 +17,14 @@ GlobalDefaultServerGameMode=None
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/VRStart")
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/VRTemplate")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/VRTemplate")
++ActiveGameNameRedirects=(OldGameName="/Script/FP_FirstPerson",NewGameName="/Script/VRStart")
++ActiveGameNameRedirects=(OldGameName="FP_FirstPerson",NewGameName="/Script/VRStart")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
+TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
@@ -60,11 +65,6 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
-
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
